--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="D:\cad\git\HW2-portfolio\index.html">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="D:\cad\git\HW2-portfolio\portfolio.html">Portfolio</a>
+          <a class="nav-link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="D:\cad\git\HW2-portfolio\contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+          <a class="nav-link" href="./\contact.html" tabindex="-1" aria-disabled="true">Contact</a>
         </li>
       </ul>
     </div>
@@ -58,7 +58,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
-    
+""    
 </body>
 
 </html>
