--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="D:\cad\git\HW2-portfolio\index.html">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="D:\cad\git\HW2-portfolio\portfolio.html">Portfolio</a>
+          <a class="nav-link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="D:\cad\git\HW2-portfolio\contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+          <a class="nav-link" href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
         </li>
       </ul>
     </div>
