--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
           <h5 class="card-title"><strong>Contact</strong></h5>
           <HR color=lightgray SIZE=1>
           <p class="card-text">
+            <div class="col-sm-6 col-md-12 col-lg-12 col-xl-12">
             <form>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Name</label>
@@ -53,6 +54,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
+            </div>
           </p>
         </div>
     </div>
